--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "dev": "./node_modules/.bin/nodemon bin/www",
+    "dev": "./node_modules/.bin/nodemon app.js",
     "prd": "pm2 start bin/www",
     "test": "mocha --bail --timeout 30000 --recursive --slow 1000 --exit",
     "initDB": "node ./db/mysql/syncDB.js",
