--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "dev": "./node_modules/.bin/nodemon app.js",
+    "start": "node ./bin/server.js",
+    "debug": "./node_modules/.bin/nodemon ./bin/server.js",
     "prd": "pm2 start bin/www",
     "test": "mocha --bail --timeout 30000 --recursive --slow 1000 --exit",
     "initDB": "node ./db/mysql/syncDB.js",
@@ -47,6 +47,7 @@
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
     "power-assert": "^1.6.1",
+    "prettier": "^2.5.0",
     "supertest": "^5.0.0"
   }
 }
